fix layout sidebar z-index

--- a/src/app/@app/sidebar/sidebar/sidebar.component.scss
+++ b/src/app/@app/sidebar/sidebar/sidebar.component.scss
@@ -1,5 +1,5 @@
 :host {
-  @apply block h-full p-0;
+  @apply block h-full p-0 rounded-e-xl;
 
   .inner {
     @apply h-full flex flex-col w-[300px] rounded-e-xl bg-neutral-100 overflow-y-auto overflow-x-hidden;
